--- a/index.html
+++ b/index.html
@@ -1,30 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Expandify Cards</title>
-</head>
-<body>
-    <div class="cardPlaceholder">
-        <div id="card1" class="activeCard">
-            <h2>Card1 Text</h2>
-        </div>
-        <div id="card2" class="expandableCards">
-            <h2>Card2 Text</h2>
-        </div> 
-        <div id="card3" class="expandableCards">
-            <h2>Card3 Text</h2>
-        </div> 
-        <div id="card4" class="expandableCards">
-            <h2>Card4 Text</h2>
-        </div> 
-        <div id="card5" class="expandableCards">
-            <h2>Card5 Text</h2>
-        </div> 
+  </head>
+  <body>
+    <div class="my-container">
+      <div id="card1" class="expandableCards active"></div>
+
+      <div id="card2" class="expandableCards"></div>
+
+      <div id="card3" class="expandableCards"></div>
+
+      <div id="card4" class="expandableCards"></div>
+
+      <div id="card5" class="expandableCards"></div>
     </div>
 
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
