--- a/index.html
+++ b/index.html
@@ -8,15 +8,33 @@
   </head>
   <body>
     <div class="my-container">
-      <div id="card1" class="expandableCards active"></div>
+      <div id="card1" class="expandableCards active"> 
+        <!-- Card1 Container  -->
+      </div>
 
-      <div id="card2" class="expandableCards"></div>
+      <div id="card2" class="expandableCards">
+        <!-- Card2 Container  -->
+      </div>
 
-      <div id="card3" class="expandableCards"></div>
+      <div id="card3" class="expandableCards">
+        <!-- Card3 Container  -->
+      </div>
 
-      <div id="card4" class="expandableCards"></div>
+      <div id="card4" class="expandableCards">
+        <!-- Card4 Container  -->
+      </div>
 
-      <div id="card5" class="expandableCards"></div>
+      <div id="card5" class="expandableCards">
+        <!-- Card5 Container  -->
+      </div>
+
+      <div id="card6" class="expandableCards">
+        <!-- Card6 Container  -->
+      </div>
+
+      <div id="card7" class="expandableCards">
+        <!-- Card7 Container  -->
+      </div>
     </div>
 
     <script src="script.js"></script>
